tests/chrono/fail_nightly/unknown.stderr
error: Unknown chrono format O
 --> $DIR/unknown.rs:2:29
  |
2 |     sscanf::scanf!("hi", "{%O}", DateTime);
  |                             ^
